# django-saas-backend-template

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.prod  I18N.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
src/: manage.py
src/configuration/: asgi.py  celery.py  jwt_settings.py  urls.py  wsgi.py
src/configuration/settings/: __init__.py  base.py  components.py  development.py  production.py  staging.py  test.py
src/locale/en/LC_MESSAGES/: django.po
src/locale/es/LC_MESSAGES/: django.po
src/myapp/: __init__.py  admin.py  apps.py  authentication.py  emailhelper.py  middleware.py  models.py  permissions.py  routing.py  token_views.py  views.py
src/myapp/apis/admin/: admin_api.py  analytics_api.py  moderation_api.py  urls.py
src/myapp/apis/admin/subscriptionplans/: api.py  urls.py
src/myapp/apis/admin/subscriptions/: api.py  urls.py
src/myapp/apis/auth/: auth_api.py  urls.py
src/myapp/apis/core/: core_api.py  urls.py
src/myapp/apis/core/content/: apis.py  urls.py
src/myapp/apis/core/discounts/: apis.py  urls.py
src/myapp/apis/core/events/: apis.py  urls.py
src/myapp/apis/core/notifications/: apis.py  providers.py  urls.py
src/myapp/apis/core/referrals/: apis.py  urls.py
src/myapp/apis/core/reminders/: apis.py  urls.py
src/myapp/apis/payment/: __init__.py  payment_api.py  urls.py
src/myapp/management/commands/: cache_clear.py
src/myapp/migrations/: 0001_initial.py  0002_payment_user.py  0003_refactor_models.py  0004_remove_referraltransaction_reftx_code_user_idx_and_more.py  0005_production_ready_refactor.py
src/myapp/models/: __init__.py  analytics.py  base.py  choices.py  content.py  discount.py  event.py  features.py  logging.py  moderation.py  notification.py  referral.py  subscription.py  user.py
src/myapp/payment_strategies/: __init__.py  base.py  factory.py  webhooks.py
src/myapp/payment_strategies/providers/: __init__.py  apple_iap.py  bank_transfer.py  google_play.py  paypal.py  stripe.py
src/myapp/serializers/: admin_serializers.py  auth_serializers.py  core_serializers.py
src/myapp/services/: __init__.py  analytics_service.py  discount_service.py  moderation_service.py  notification_service.py  referral_service.py  refund_service.py  subscription_service.py
src/myapp/services/notification/: __init__.py  notification_service.py  providers.py
src/myapp/services/payment/: __init__.py  discount.py  payment_service.py  referral.py  refund.py
src/myapp/tasks/: tasks.py
src/myapp/utils/: caching.py  logging_utils.py
src/myapputils/: __init__.py  log_helpers.py  logging.py
src/tests/: __init__.py  conftest.py  integration_test.py  test_api.py  test_basic.py  test_middleware.py  test_models.py  test_services.py  test_tasks.py  test_webhooks.py
